# lgr_ehr

./: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml
keycloak/: ehr-realm.json
migrations/: 20250908201037_create_keycloak_schema.up.sql
src/: api.rs  lib.rs  main.rs  state.rs
src/domain/error/: app_error.rs  http_response.rs  mod.rs
src/domain/interfaces/: auth_provider.rs  email_client.rs  mod.rs
src/domain/types/: email.rs  email_content.rs  mod.rs  password.rs  user.rs
src/routes/: delete_user.rs  get_user_id.rs  health.rs  mod.rs  send_test_email.rs  signup.rs
src/routes/auth/: mod.rs  signup.rs  state.rs
src/services/: keycloak_auth_provider.rs  lettre_mailhog_email_client.rs  mod.rs
src/utils/: config.rs  tracing.rs
tests/api/: email.rs  health.rs  helpers.rs  main.rs  signup.rs
zip/: Dockerfile  docker-compose.yml
zip/keycloak/: ehr-realm.json
zip/migrations/: 20250904154121_init.down.sql  20250904154121_init.up.sql  20250908201037_create_keycloak_schema.down.sql
zip/src/: main.rs
zip/src/domain/interfaces/: auth_provider.rs
zip/src/routes/: mod.rs
zip/src/services/: keycloak_auth_provider.rs
zip/tests/api/: get_user_id.rs  health.rs  signup.rs
