[package]
name = "lgr_ehr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
async-trait = "0.1"
color-eyre = "0.6"
dotenvy = "0.15"
http = "1"
poem = { version = "3", features = ["rustls", "server", "requestid"] }
poem-openapi = { version = "5", features = ["swagger-ui"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.20", features = ["derive"] }
